--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,11 @@ edition = "2018"
 authors =[]
 
 [lib]
-name = "string_sum"
+name = "markdown_html_finder"
 crate-type = ["cdylib"]
+
+[dependencies]
+pulldown-cmark = "0.5.3"
 
 [dependencies.pyo3]
 version = "0.7.0"
