--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,13 +10,13 @@ jobs:
       # https://circleci.com/docs/2.0/caching/
       - restore_cache:
           keys:
-            - doug-v1-{{ .Branch }}-{{ checksum "Cargo.lock" }}
-            - doug-v1-{{ .Branch }}-
-            - doug-v1-
+            - markdown-html-finder-v1-{{ .Branch }}-{{ checksum "Cargo.lock" }}
+            - markdown-html-finder-v1-{{ .Branch }}-
+            - markdown-html-finder-v1-
       - save_cache:
           paths:
             - ~/.cargo/
-          key: doug-v1-{{ .Branch }}-{{ checksum "Cargo.lock" }}
+          key: markdown-html-finder-v1-{{ .Branch }}-{{ checksum "Cargo.lock" }}
       - run:
           name: run tests
           command: |
