--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,13 +10,13 @@ jobs:
       # https://circleci.com/docs/2.0/caching/
       - restore_cache:
           keys:
-            - markdown-html-finder-v1-{{ .Branch }}-{{ checksum "Cargo.lock" }}
+            - markdown-html-finder-v1-{{ .Branch }}-{{ checksum "Cargo.toml" }}
             - markdown-html-finder-v1-{{ .Branch }}-
             - markdown-html-finder-v1-
       - save_cache:
           paths:
             - ~/.cargo/
-          key: markdown-html-finder-v1-{{ .Branch }}-{{ checksum "Cargo.lock" }}
+          key: markdown-html-finder-v1-{{ .Branch }}-{{ checksum "Cargo.toml" }}
       - run:
           name: run tests
           command: |
@@ -30,7 +30,7 @@ jobs:
       # https://circleci.com/docs/2.0/caching/
       - restore_cache:
           keys:
-            - markdown-html-finder-v1-{{ .Branch }}-{{ checksum "Cargo.lock" }}
+            - markdown-html-finder-v1-{{ .Branch }}-{{ checksum "Cargo.toml" }}
             - markdown-html-finder-v1-{{ .Branch }}-
             - markdown-html-finder-v1-
       - run:
@@ -42,7 +42,7 @@ jobs:
       - save_cache:
           paths:
             - ~/.cargo/
-          key: markdown-html-finder-v1-{{ .Branch }}-{{ checksum "Cargo.lock" }}
+          key: markdown-html-finder-v1-{{ .Branch }}-{{ checksum "Cargo.toml" }}
       - run:
           name: run lints
           command: |
