--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,3 +9,11 @@ python = "^3.7"
 
 [tool.poetry.dev-dependencies]
 pyo3-pack = "^0.6.1"
+wheel = "^0.35.1"
+toml = "^0.10.2"
+ipython = "^7.19"
+flake8 = {version = "^3.8",allows-prereleases = true}
+black = {version = "^18.3-alpha.0",allows-prereleases = true}
+isort = {version = "^5.6",allows-prereleases = true}
+mypy = "^0.790.0"
+twine = "^3.2"
