add: license & update release

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
 name = "markdown-html-finder"
-version = "0.2.0"
+version = "0.2.2"
 edition = "2018"
-authors =[]
+description = "A Python library to find html in strings"
+repository = "https://github.com/chdsbd/markdown-html-finder"
+authors = []
+readme = "README.md"
+keywords = ["html"]
 
 [lib]
 name = "markdown_html_finder"
