--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,3 +17,8 @@ isort = {version = "^5.6",allow-prereleases = true}
 mypy = "^0.961"
 twine = "^4.0.1"
 maturin = "^0.12.20"
+
+
+[build-system]
+requires = ["maturin>=0.13,<0.14"]
+build-backend = "maturin"
